@@ -44,12 +44,13 @@ import static compiler.valhalla.inlinetypes.InlineTypes.*;
  * @test
  * @key randomness
  * @summary Test value class arrays.
- * @modules java.base/jdk.internal.value
  * @library /test/lib /
+ * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestArrays.java
- * @run main/othervm/timeout=300 -XX:+EnableValhalla compiler.valhalla.inlinetypes.TestArrays
+ * @enablePreview
+ * @run main/othervm/timeout=300 compiler.valhalla.inlinetypes.TestArrays
  */
 
 @ForceCompileClassInitializer
@@ -57,10 +58,10 @@ public class TestArrays {
 
     public static void main(String[] args) {
         Scenario[] scenarios = InlineTypes.DEFAULT_SCENARIOS;
-        scenarios[2].addFlags("-XX:+EnableValhalla", "-XX:-MonomorphicArrayCheck", "-XX:-UncommonNullCast", "-XX:+StressArrayCopyMacroNode");
-        scenarios[3].addFlags("-XX:+EnableValhalla", "-XX:-MonomorphicArrayCheck", "-XX:FlatArrayElementMaxSize=-1", "-XX:-UncommonNullCast");
-        scenarios[4].addFlags("-XX:+EnableValhalla", "-XX:-MonomorphicArrayCheck", "-XX:-UncommonNullCast");
-        scenarios[5].addFlags("-XX:+EnableValhalla", "-XX:-MonomorphicArrayCheck", "-XX:-UncommonNullCast", "-XX:+StressArrayCopyMacroNode");
+        scenarios[2].addFlags("--enable-preview", "-XX:-MonomorphicArrayCheck", "-XX:-UncommonNullCast", "-XX:+StressArrayCopyMacroNode");
+        scenarios[3].addFlags("--enable-preview", "-XX:-MonomorphicArrayCheck", "-XX:FlatArrayElementMaxSize=-1", "-XX:-UncommonNullCast");
+        scenarios[4].addFlags("--enable-preview", "-XX:-MonomorphicArrayCheck", "-XX:-UncommonNullCast");
+        scenarios[5].addFlags("--enable-preview", "-XX:-MonomorphicArrayCheck", "-XX:-UncommonNullCast", "-XX:+StressArrayCopyMacroNode");
 
         InlineTypes.getFramework()
                    .addScenarios(scenarios)
@@ -1429,6 +1430,9 @@ public class TestArrays {
             verif[i] = va[i];
         }
         Object[] result = test59(va);
+        // Result is a null-restricted array
+        Asserts.assertEQ(result[len], ValueClass.zeroInstance(MyValue1.class));
+        result[len] = MyValue1.createDefaultInline();
         verify(verif, result);
     }
 
@@ -1447,6 +1451,9 @@ public class TestArrays {
             verif[i] = (MyValue1)va[i];
         }
         Object[] result = test60(va, va.getClass());
+        // Result is a null-restricted array
+        Asserts.assertEQ(result[len], ValueClass.zeroInstance(MyValue1.class));
+        result[len] = MyValue1.createDefaultInline();
         verify(verif, result);
     }
 
@@ -1458,18 +1465,18 @@ public class TestArrays {
     @Run(test = "test61")
     public void test61_verifier() {
         int len = Math.abs(rI) % 10;
-        Object[] va = new Integer[len];
+        Object[] va = new NonValueClass[len];
         for (int i = 0; i < len; ++i) {
-            va[i] = Integer.valueOf(rI);
+            va[i] = new NonValueClass(rI);
         }
-        Object[] result = test61(va, Integer[].class);
+        Object[] result = test61(va, NonValueClass[].class);
         for (int i = 0; i < va.length; ++i) {
             Asserts.assertEQ(va[i], result[i]);
         }
     }
 
     @ForceInline
-    public Object[] test62_helper(int i, MyValue1[] va, Integer[] oa) {
+    public Object[] test62_helper(int i, MyValue1[] va, NonValueClass[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = oa;
@@ -1480,7 +1487,7 @@ public class TestArrays {
     }
 
     @Test
-    public Object[] test62(MyValue1[] va, Integer[] oa) {
+    public Object[] test62(MyValue1[] va, NonValueClass[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1493,9 +1500,9 @@ public class TestArrays {
     public void test62_verifier() {
         int len = Math.abs(rI) % 10;
         MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
-        Integer[] oa = new Integer[len];
+        NonValueClass[] oa = new NonValueClass[len];
         for (int i = 0; i < len; ++i) {
-            oa[i] = Integer.valueOf(rI);
+            oa[i] = new NonValueClass(rI);
         }
         test62_helper(42, va, oa);
         Object[] result = test62(va, oa);
@@ -1505,7 +1512,7 @@ public class TestArrays {
     }
 
     @ForceInline
-    public Object[] test63_helper(int i, MyValue1[] va, Integer[] oa) {
+    public Object[] test63_helper(int i, MyValue1[] va, NonValueClass[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = va;
@@ -1516,7 +1523,7 @@ public class TestArrays {
     }
 
     @Test
-    public Object[] test63(MyValue1[] va, Integer[] oa) {
+    public Object[] test63(MyValue1[] va, NonValueClass[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1534,9 +1541,12 @@ public class TestArrays {
             va[i] = MyValue1.createWithFieldsInline(rI, rL);
             verif[i] = va[i];
         }
-        Integer[] oa = new Integer[len];
+        NonValueClass[] oa = new NonValueClass[len];
         test63_helper(42, va, oa);
         Object[] result = test63(va, oa);
+        // Result is a null-restricted array
+        Asserts.assertEQ(result[len], MyValue1.createDefaultInline());
+        result[len] = MyValue1.createDefaultInline();
         verify(verif, result);
     }
 
@@ -1746,7 +1756,7 @@ public class TestArrays {
 
     // Some more array clone tests
     @ForceInline
-    public Object[] test75_helper(int i, MyValue1[] va, Integer[] oa) {
+    public Object[] test75_helper(int i, MyValue1[] va, NonValueClass[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = oa;
@@ -1757,7 +1767,7 @@ public class TestArrays {
     }
 
     @Test
-    public Object[] test75(MyValue1[] va, Integer[] oa) {
+    public Object[] test75(MyValue1[] va, NonValueClass[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1769,9 +1779,9 @@ public class TestArrays {
     public void test75_verifier() {
         int len = Math.abs(rI) % 10;
         MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
-        Integer[] oa = new Integer[len];
+        NonValueClass[] oa = new NonValueClass[len];
         for (int i = 0; i < len; ++i) {
-            oa[i] = Integer.valueOf(rI);
+            oa[i] = new NonValueClass(rI);
         }
         test75_helper(42, va, oa);
         Object[] result = test75(va, oa);
@@ -1784,7 +1794,7 @@ public class TestArrays {
     }
 
     @ForceInline
-    public Object[] test76_helper(int i, MyValue1[] va, Integer[] oa) {
+    public Object[] test76_helper(int i, MyValue1[] va, NonValueClass[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = va;
@@ -1795,7 +1805,7 @@ public class TestArrays {
     }
 
     @Test
-    public Object[] test76(MyValue1[] va, Integer[] oa) {
+    public Object[] test76(MyValue1[] va, NonValueClass[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1812,7 +1822,7 @@ public class TestArrays {
             va[i] = MyValue1.createWithFieldsInline(rI, rL);
             verif[i] = va[i];
         }
-        Integer[] oa = new Integer[len];
+        NonValueClass[] oa = new NonValueClass[len];
         test76_helper(42, va, oa);
         Object[] result = test76(va, oa);
         verify(verif, result);
@@ -1876,18 +1886,18 @@ public class TestArrays {
     @IR(applyIf = {"FlatArrayElementMaxSize", "!= -1"},
         failOn = {ALLOC_G, ALLOCA_G, LOAD_UNKNOWN_INLINE})
     public Object test79(Object[] array, int i) {
-        Integer i1 = (Integer)array[0];
+        NonValueClass i1 = (NonValueClass)array[0];
         Object o = array[1];
         return array[i];
     }
 
     @Run(test = "test79")
     public void test79_verifier() {
-        Integer i = Integer.valueOf(rI);
-        Integer[] array = new Integer[2];
-        array[1] = i;
+        NonValueClass obj = new NonValueClass(rI);
+        NonValueClass[] array = new NonValueClass[2];
+        array[1] = obj;
         Object result = test79(array, 1);
-        Asserts.assertEquals(result, i);
+        Asserts.assertEquals(result, obj);
     }
 
     // Same as test79 but with not-flattenable value class
@@ -1914,7 +1924,7 @@ public class TestArrays {
     // Verify that writing an object of a non-inline, non-null type to an array marks the array as not-null-free and not-flat
     @Test
     @IR(failOn = {ALLOC_G, ALLOCA_G, LOAD_UNKNOWN_INLINE, STORE_UNKNOWN_INLINE, INLINE_ARRAY_NULL_GUARD})
-    public Object test81(Object[] array, Integer v, Object o, int i) {
+    public Object test81(Object[] array, NonValueClass v, Object o, int i) {
         if (v == null) {
           return null;
         }
@@ -1926,19 +1936,19 @@ public class TestArrays {
 
     @Run(test = "test81")
     public void test81_verifier() {
-        Integer i = Integer.valueOf(rI);
-        Integer[] array1 = new Integer[3];
+        NonValueClass obj = new NonValueClass(rI);
+        NonValueClass[] array1 = new NonValueClass[3];
         Object[] array2 = new Object[3];
-        Object result = test81(array1, i, i, 0);
-        Asserts.assertEquals(array1[0], i);
-        Asserts.assertEquals(array1[1], i);
-        Asserts.assertEquals(array1[2], i);
-        Asserts.assertEquals(result, i);
-        result = test81(array2, i, i, 1);
-        Asserts.assertEquals(array2[0], i);
-        Asserts.assertEquals(array2[1], i);
-        Asserts.assertEquals(array2[2], i);
-        Asserts.assertEquals(result, i);
+        Object result = test81(array1, obj, obj, 0);
+        Asserts.assertEquals(array1[0], obj);
+        Asserts.assertEquals(array1[1], obj);
+        Asserts.assertEquals(array1[2], obj);
+        Asserts.assertEquals(result, obj);
+        result = test81(array2, obj, obj, 1);
+        Asserts.assertEquals(array2[0], obj);
+        Asserts.assertEquals(array2[1], obj);
+        Asserts.assertEquals(array2[2], obj);
+        Asserts.assertEquals(result, obj);
     }
 
     // Verify that writing an object of a non-flattenable value class to an array marks the array as not-flat
@@ -1979,17 +1989,17 @@ public class TestArrays {
     @IR(applyIf = {"FlatArrayElementMaxSize", "!= -1"},
             failOn = {ALLOC_G, ALLOCA_G, LOAD_UNKNOWN_INLINE, STORE_UNKNOWN_INLINE, INLINE_ARRAY_NULL_GUARD})
     public void test83(Object[] array, Object o) {
-        Integer i = (Integer)array[0];
+        NonValueClass i = (NonValueClass)array[0];
         array[1] = o;
     }
 
     @Run(test = "test83")
     public void test83_verifier() {
-        Integer i = Integer.valueOf(rI);
-        Integer[] array1 = new Integer[2];
+        NonValueClass obj = new NonValueClass(rI);
+        NonValueClass[] array1 = new NonValueClass[2];
         Object[] array2 = new Object[2];
-        test83(array1, i);
-        Asserts.assertEquals(array1[1], i);
+        test83(array1, obj);
+        Asserts.assertEquals(array1[1], obj);
         test83(array2, null);
         Asserts.assertEquals(array2[1], null);
     }
@@ -2040,15 +2050,15 @@ public class TestArrays {
 
     @Run(test = "test85")
     public void test85_verifier(RunInfo info) {
-        Integer i = Integer.valueOf(rI);
-        Integer[] array1 = new Integer[2];
+        NonValueClass obj = new NonValueClass(rI);
+        NonValueClass[] array1 = new NonValueClass[2];
         Object[] array2 = new Object[2];
-        test85(array1, i, true);
-        Asserts.assertEquals(array1[1], i);
+        test85(array1, obj, true);
+        Asserts.assertEquals(array1[1], obj);
         test85(array1, null, false);
         Asserts.assertEquals(array1[1], null);
-        test85(array2, i, true);
-        Asserts.assertEquals(array2[1], i);
+        test85(array2, obj, true);
+        Asserts.assertEquals(array2[1], obj);
         test85(array2, null, false);
         Asserts.assertEquals(array2[1], null);
         if (!info.isWarmUp()) {
@@ -2136,13 +2146,13 @@ public class TestArrays {
 
     // Additional correctness tests to make sure we have the required null checks
     @Test
-    public void test88(Object[] array, Integer v) {
+    public void test88(Object[] array, NonValueClass v) {
         array[0] = v;
     }
 
     @Run(test = "test88")
     public void test88_verifier(RunInfo info) {
-        Integer[] array1 = new Integer[1];
+        NonValueClass[] array1 = new NonValueClass[1];
         Object[] array2 = new Object[1];
         test88(array1, null);
         Asserts.assertEquals(array1[0], null);
@@ -2160,7 +2170,7 @@ public class TestArrays {
     }
 
     @Test
-    public void test89(MyValue1[] array, Integer v) {
+    public void test89(MyValue1[] array, NonValueClass v) {
         Object o = v;
         array[0] = (MyValue1)o;
     }
@@ -2330,20 +2340,22 @@ public class TestArrays {
         }
     }
 
+    static final MyValue1[] nullFreeArray = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+
     // Test propagation of not null-free/flat information
     @Test
     @IR(failOn = CHECKCAST_ARRAY)
     public MyValue1[] test95(Object[] array) {
         array[0] = null;
         // Always throws a ClassCastException because we just successfully
-        // stored null and therefore the array can't be an value class array.
-        return (MyValue1[])array;
+        // stored null and therefore the array can't be a null-free value class array.
+        return nullFreeArray.getClass().cast(array);
     }
 
     @Run(test = "test95")
     public void test95_verifier() {
         MyValue1[] array1 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
-        Integer[] array2 = new Integer[1];
+        NonValueClass[] array2 = new NonValueClass[1];
         try {
             test95(array1);
             throw new RuntimeException("Should throw NullPointerException");
@@ -2364,15 +2376,15 @@ public class TestArrays {
     public boolean test96(Object[] array) {
         array[0] = null;
         // Always throws a ClassCastException because we just successfully
-        // stored null and therefore the array can't be an value class array.
-        MyValue1[] casted = (MyValue1[])array;
+        // stored null and therefore the array can't be a null-free value class array.
+        MyValue1[] casted = nullFreeArray.getClass().cast(array);
         return casted != null;
     }
 
     @Run(test = "test96")
     public void test96_verifier() {
         MyValue1[] array1 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
-        Integer[] array2 = new Integer[1];
+        NonValueClass[] array2 = new NonValueClass[1];
         try {
             test96(array1);
             throw new RuntimeException("Should throw NullPointerException");
@@ -2391,7 +2403,7 @@ public class TestArrays {
     @Test
     @IR(failOn = CHECKCAST_ARRAY)
     public boolean test97(Object[] array) {
-        array[0] = 42;
+        array[0] = new NonValueClass(42);
         // Always throws a ClassCastException because we just successfully stored
         // a non-value type value and therefore the array can't be a value class array.
         return array instanceof MyValue1[];
@@ -2400,7 +2412,7 @@ public class TestArrays {
     @Run(test = "test97")
     public void test97_verifier() {
         MyValue1[] array1 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
-        Integer[] array2 = new Integer[1];
+        NonValueClass[] array2 = new NonValueClass[1];
         try {
             test97(array1);
             throw new RuntimeException("Should throw ArrayStoreException");
@@ -2497,8 +2509,7 @@ public class TestArrays {
 
     // Test that CHECKCAST_ARRAY matching works as expected
     @Test
-    // TODO 8325106 This fails to detect the "movq    R10, precise [compiler/valhalla/inlinetypes/MyValue1" shape, also affects mainline
-    // @IR(counts = { IRNode.CHECKCAST_ARRAY, "= 1" })
+    @IR(counts = { CHECKCAST_ARRAY, "= 1" })
     public boolean test101(Object[] array) {
         return array instanceof MyValue1[];
     }
@@ -2507,8 +2518,37 @@ public class TestArrays {
     public void test101_verifier() {
         MyValue1[] array1 = new MyValue1[1];
         NotFlattenable[] array2 = (NotFlattenable[])ValueClass.newNullRestrictedArray(NotFlattenable.class, 1);
+        MyValue1[] array3 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         Asserts.assertTrue(test101(array1));
         Asserts.assertFalse(test101(array2));
+        Asserts.assertTrue(test101(array3));
+    }
+
+    // Test that CHECKCAST_ARRAY matching works as expected with null-free arrays
+    @Test
+    @IR(counts = { CHECKCAST_ARRAY, "= 1" })
+    public Object test101NullFree(Object[] array) {
+        return nullFreeArray.getClass().cast(array);
+    }
+
+    @Run(test = "test101NullFree")
+    public void test101NullFree_verifier() {
+        MyValue1[] array1 = new MyValue1[1];
+        NotFlattenable[] array2 = (NotFlattenable[])ValueClass.newNullRestrictedArray(NotFlattenable.class, 1);
+        MyValue1[] array3 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+        try {
+            test101NullFree(array1);
+            throw new RuntimeException("Should throw ClassCastException");
+        } catch (ClassCastException e) {
+            // Expected
+        }
+        try {
+            test101NullFree(array2);
+            throw new RuntimeException("Should throw ClassCastException");
+        } catch (ClassCastException e) {
+            // Expected
+        }
+        test101NullFree(array3);
     }
 
     static final MyValue2[] val_src = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 8);
@@ -2524,7 +2564,7 @@ public class TestArrays {
     @ForceInline
     static Class get_val_class() { return val_src.getClass(); }
     @ForceInline
-    static Class get_int_class() { return Integer[].class; }
+    static Class get_non_val_class() { return NonValueClass[].class; }
     @ForceInline
     static Object get_obj_src() { return obj_src; }
     @ForceInline
@@ -2751,12 +2791,8 @@ public class TestArrays {
 
     @Run(test = "test113_null")
     public void test113_null_verifier() {
-        try {
-            test113_null();
-            throw new RuntimeException("NullPointerException expected");
-        } catch (NullPointerException e) {
-            // expected
-        }
+        Object[] res = test113_null();
+        verify(obj_null_src, res);
     }
 
     // Below tests are equal to test110-test113 but hide the src/dst types until
@@ -2824,19 +2860,16 @@ public class TestArrays {
 
     @Run(test = "test117_null")
     public void test117_null_verifier() {
-        try {
-            test117_null();
-            throw new RuntimeException("NullPointerException expected");
-        } catch (NullPointerException e) {
-            // expected
-        }
+        Object[] res = test117_null();
+        verify((Object[])get_obj_null_src(), res);
     }
 
     // Some more Arrays.copyOf tests with only constant class
 
     @Test
-    @IR(counts = {CLASS_CHECK_TRAP, "= 1"},
-        failOn = INTRINSIC_SLOW_PATH)
+    @IR(counts = {CLASS_CHECK_TRAP, "= 1"})
+    // TODO JDK-8329224
+    // failOn = INTRINSIC_SLOW_PATH)
     public Object[] test118(Object[] src) {
         return Arrays.copyOf(src, 8, val_src.getClass());
     }
@@ -2847,12 +2880,8 @@ public class TestArrays {
         verify(obj_src, res);
         res = test118(val_src);
         verify(val_src, res);
-        try {
-            test118(obj_null_src);
-            throw new RuntimeException("NullPointerException expected");
-        } catch (NullPointerException e) {
-            // expected
-        }
+        res = test118(obj_null_src);
+        verify(obj_null_src, res);
     }
 
     @Test
@@ -2869,17 +2898,18 @@ public class TestArrays {
     }
 
     @Test
-    @IR(counts = {CLASS_CHECK_TRAP, "= 1"},
-        failOn = INTRINSIC_SLOW_PATH)
+    @IR(counts = {CLASS_CHECK_TRAP, "= 1"})
+    // TODO JDK-8329224
+    // failOn = INTRINSIC_SLOW_PATH)
     public Object[] test120(Object[] src) {
-        return Arrays.copyOf(src, 8, Integer[].class);
+        return Arrays.copyOf(src, 8, NonValueClass[].class);
     }
 
     @Run(test = "test120")
     public void test120_verifier() {
-        Integer[] arr = new Integer[8];
+        NonValueClass[] arr = new NonValueClass[8];
         for (int i = 0; i < 8; ++i) {
-            arr[i] = rI + i;
+            arr[i] = new NonValueClass(rI + i);
         }
         Object[] res = test120(arr);
         verify(arr, res);
@@ -2903,12 +2933,8 @@ public class TestArrays {
         verify(obj_src, res);
         res = test121(val_src);
         verify(val_src, res);
-        try {
-            test121(obj_null_src);
-            throw new RuntimeException("NullPointerException expected");
-        } catch (NullPointerException e) {
-            // expected
-        }
+        res = test121(obj_null_src);
+        verify(obj_null_src, res);
     }
     @Test
     public Object[] test122(Object[] src) {
@@ -2922,25 +2948,21 @@ public class TestArrays {
         verify(obj_src, res);
         res = test122(val_src);
         verify(val_src, res);
-        try {
-            test122(obj_null_src);
-            throw new RuntimeException("NullPointerException expected");
-        } catch (NullPointerException e) {
-            // expected
-        }
+        res = test122(obj_null_src);
+        verify(obj_null_src, res);
     }
 
     @Test
     public Object[] test123(Object[] src) {
-        return Arrays.copyOf(src, 8, Integer[].class);
+        return Arrays.copyOf(src, 8, NonValueClass[].class);
     }
 
     @Run(test = "test123")
     @Warmup(10000) // Make sure we hit too_many_traps for the src <: dst check
     public void test123_verifier() {
-        Integer[] arr = new Integer[8];
+        NonValueClass[] arr = new NonValueClass[8];
         for (int i = 0; i < 8; ++i) {
-            arr[i] = rI + i;
+            arr[i] = new NonValueClass(rI + i);
         }
         Object[] res = test123(arr);
         verify(arr, res);
@@ -2954,15 +2976,15 @@ public class TestArrays {
 
     @Test
     public Object[] test124(Object[] src) {
-        return Arrays.copyOf(src, 8, get_int_class());
+        return Arrays.copyOf(src, 8, get_non_val_class());
     }
 
     @Run(test = "test124")
     @Warmup(10000) // Make sure we hit too_many_traps for the src <: dst check
     public void test124_verifier() {
-        Integer[] arr = new Integer[8];
+        NonValueClass[] arr = new NonValueClass[8];
         for (int i = 0; i < 8; ++i) {
-            arr[i] = rI + i;
+            arr[i] = new NonValueClass(rI + i);
         }
         Object[] res = test124(arr);
         verify(arr, res);
@@ -2982,22 +3004,18 @@ public class TestArrays {
     @Run(test = "test125")
     @Warmup(10000) // Make sure we hit too_many_traps for the src <: dst check
     public void test125_verifier() {
-        Integer[] arr = new Integer[8];
+        NonValueClass[] arr = new NonValueClass[8];
         for (int i = 0; i < 8; ++i) {
-            arr[i] = rI + i;
+            arr[i] = new NonValueClass(rI + i);
         }
-        Object[] res = test125(arr, Integer[].class);
+        Object[] res = test125(arr, NonValueClass[].class);
         verify((Object[])arr, res);
         res = test125(val_src, val_src.getClass());
         verify(val_src, res);
         res = test125(obj_src, val_src.getClass());
-        verify(val_src, res);
-        try {
-            test125(obj_null_src, val_src.getClass());
-            throw new RuntimeException("NullPointerException expected");
-        } catch (NullPointerException e) {
-            // expected
-        }
+        verify(obj_src, res);
+        res = test125(obj_null_src, val_src.getClass());
+        verify(obj_null_src, res);
         try {
             test125(arr, val_src.getClass());
             throw new RuntimeException("ArrayStoreException expected");
@@ -3101,8 +3119,7 @@ public class TestArrays {
 
     // Empty value class array access
     @Test
-    // TODO 8325106 Shouldn't profiling determine that the array is null restricted?
-    //@IR(failOn = {ALLOC, ALLOCA, LOAD, STORE})
+    @IR(failOn = {ALLOC, ALLOCA, LOAD})
     public MyValueEmpty test130(MyValueEmpty[] array) {
         array[0] = new MyValueEmpty();
         return array[1];
@@ -3125,8 +3142,7 @@ public class TestArrays {
 
     // Empty value class container array access
     @Test
-    // TODO 8325106 Shouldn't profiling determine that the array is null restricted?
-    //@IR(failOn = {ALLOC, ALLOCA, LOAD, STORE})
+    @IR(failOn = {ALLOC, ALLOCA, LOAD})
     public MyValueEmpty test131(EmptyContainer[] array) {
         array[0] = new EmptyContainer();
         return array[1].empty;
@@ -3210,8 +3226,8 @@ public class TestArrays {
             Asserts.assertEquals(((MyValue1)res).hash(), array1[1].hash());
             Asserts.assertEquals(array1[0].hash(), array1[1].hash());
         }
-        Integer[] array2 = new Integer[2];
-        array2[1] = rI;
+        NonValueClass[] array2 = new NonValueClass[2];
+        array2[1] = new NonValueClass(rI);
         synchronized (array2) {
             Object res = test135(array2, array2[1]);
             Asserts.assertEquals(res, array2[1]);
@@ -3237,8 +3253,8 @@ public class TestArrays {
         Object res = test136(array1, array1[1]);
         Asserts.assertEquals(((MyValue1)res).hash(), array1[1].hash());
         Asserts.assertEquals(array1[0].hash(), array1[1].hash());
-        Integer[] array2 = new Integer[2];
-        array2[1] = rI;
+        NonValueClass[] array2 = new NonValueClass[2];
+        array2[1] = new NonValueClass(rI);
         res = test136(array2, array2[1]);
         Asserts.assertEquals(res, array2[1]);
         Asserts.assertEquals(array2[0], array2[1]);
@@ -3259,8 +3275,8 @@ public class TestArrays {
     public void test137_verifier() {
         MyValue1[] array1 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 100);
         Arrays.fill(array1, MyValue1.createWithFieldsInline(rI, rL));
-        Integer[] array2 = new Integer[100];
-        Arrays.fill(array2, rI);
+        NonValueClass[] array2 = new NonValueClass[100];
+        Arrays.fill(array2, new NonValueClass(rI));
         synchronized (array1) {
             test137(array1, array1);
             Asserts.assertEquals(oFld1, array1[0]);
@@ -3302,8 +3318,8 @@ public class TestArrays {
     public void test138_verifier() {
         MyValue1[] array1 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 100);
         Arrays.fill(array1, MyValue1.createWithFieldsInline(rI, rL));
-        Integer[] array2 = new Integer[100];
-        Arrays.fill(array2, rI);
+        NonValueClass[] array2 = new NonValueClass[100];
+        Arrays.fill(array2, new NonValueClass(rI));
         test138(array1, array1);
         Asserts.assertEquals(oFld1, array1[0]);
         Asserts.assertEquals(oFld2, array1[0]);
@@ -3325,11 +3341,11 @@ public class TestArrays {
                   STORE_UNKNOWN_INLINE, INLINE_ARRAY_NULL_GUARD})
     public Object test139() {
         Object[]  array = null;
-        Object[] iarray = new Integer[1];
+        Object[] oarray = new NonValueClass[1];
         Object[] varray = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         for (int i = 0; i < 10; i++) {
             array = varray;
-            varray = iarray;
+            varray = oarray;
         }
         return array[0];
     }
@@ -3342,15 +3358,15 @@ public class TestArrays {
 
     // Test store to array that is only known to be not a value class array after parsing
     @Test
-    @IR(failOn = {ALLOCA, ALLOC_G, LOOP, LOAD, STORE, TRAP,
+    @IR(failOn = {ALLOCA, ALLOC_G, LOOP, LOAD, TRAP,
                   LOAD_UNKNOWN_INLINE, STORE_UNKNOWN_INLINE, INLINE_ARRAY_NULL_GUARD})
     public Object[] test140(Object val) {
         Object[]  array = null;
-        Object[] iarray = new Integer[1];
+        Object[] oarray = new NonValueClass[1];
         Object[] varray = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         for (int i = 0; i < 10; i++) {
             array = varray;
-            varray = iarray;
+            varray = oarray;
         }
         array[0] = val;
         return array;
@@ -3358,8 +3374,9 @@ public class TestArrays {
 
     @Run(test = "test140")
     public void test140_verifier() {
-        Object[] res = test140(rI);
-        Asserts.assertEquals(res[0], rI);
+        NonValueClass obj = new NonValueClass(rI);
+        Object[] res = test140(obj);
+        Asserts.assertEquals(res[0], obj);
         res = test140(null);
         Asserts.assertEquals(res[0], null);
     }
@@ -3370,11 +3387,11 @@ public class TestArrays {
     // @IR(failOn = {ALLOC_G, ALLOCA_G, LOOP, LOAD, STORE, TRAP, LOAD_UNKNOWN_INLINE, STORE_UNKNOWN_INLINE, INLINE_ARRAY_NULL_GUARD})
     public Object test141() {
         Object[]  array = null;
-        Object[] iarray = new Integer[1];
+        Object[] oarray = new NonValueClass[1];
         Object[] varray = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         for (int i = 0; i < 10; i++) {
-            array = iarray;
-            iarray = varray;
+            array = oarray;
+            oarray = varray;
         }
         return array[0];
     }
@@ -3391,11 +3408,11 @@ public class TestArrays {
     // @IR(failOn = {ALLOCA, ALLOC_G, LOOP, LOAD, STORE, TRAP, LOAD_UNKNOWN_INLINE, STORE_UNKNOWN_INLINE, INLINE_ARRAY_NULL_GUARD})
     public Object[] test142(Object val) {
         Object[]  array = null;
-        Object[] iarray = new Integer[1];
+        Object[] oarray = new NonValueClass[1];
         Object[] varray = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         for (int i = 0; i < 10; i++) {
-            array = iarray;
-            iarray = varray;
+            array = oarray;
+            oarray = varray;
         }
         array[0] = val;
         return array;
