@@ -25,16 +25,12 @@
  * @test
  * @bug 8260034 8260225 8260283 8261037 8261874 8262128 8262831 8306986
  * @summary A selection of generated tests that triggered bugs not covered by other tests.
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED
- *          TestGenerated.java
- * @run main/othervm -XX:+EnableValhalla -Xbatch
- *                   --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *                   --add-exports java.base/jdk.internal.value=ALL-UNNAMED
+ * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @run main/othervm -Xbatch
  *                   compiler.valhalla.inlinetypes.TestGenerated
- * @run main/othervm -XX:+EnableValhalla -Xbatch -XX:FlatArrayElementMaxSize=0
- *                   --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *                   --add-exports java.base/jdk.internal.value=ALL-UNNAMED
+ * @run main/othervm -Xbatch -XX:FlatArrayElementMaxSize=0
  *                   compiler.valhalla.inlinetypes.TestGenerated
  */
 
@@ -357,7 +353,7 @@ public class TestGenerated {
             t.test13(array5);
             t.test14(false, new MyValue4());
             t.test15();
-            // TODO 8325106 Triggers "nothing between inner and outer loop" assert
+            // TODO 8332814 This triggers the "nothing between inner and outer loop" assert
             // t.test16();
             t.test17();
             t.test18();
